--- a/SpringMVC-Mybatis-Shiro-redis-0.2-master/.project
+++ b/SpringMVC-Mybatis-Shiro-redis-0.2-master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>shiro_ssm</name>
+	<name>SpringMVC-Mybatis-Shiro-redis-0.2-master</name>
 	<comment></comment>
 	<projects>
 	</projects>
